 - Skill families will now be condensed into a single dropdown. Old save patching must be enabled when updating for this to work properly.
 - Changed up the preloader / title screen background.
 - Reverted most dungeons back to the old dungeon map border style (same as the indoors style).
 - Many shops have had their stock changed. Some enemy drop pools have also been adjusted.
 - Uncrafted items now show their mask name if in an ingredient list.
 - A crafting ingredient's color now changes depending on if the player has enough of it.
 - Many items have had their icons changed to stand out a bit more.
 - Being defeated by a Lost Soul in the Great Pyramid will now send you back to the start of the dungeon instead of giving a game over.
 - Unknown enemy weaknesses now show a question mark icon.
 - The night overlay now shows in battle.
 - Changed the respawn time of Copper Oreleaf from 36 minutes to 30 minutes.
 - Moved Change of Heart to the Magic skill category.
 - Presents now have a 50% drop chance on December 25th rather than the default 20%.
 - Red Gel can now be used on party members in battle.
 - Sharpened battleback images.

Music Update (Final Wave):
 - Redid "New Lands".

Balancing:
 - Nerfed the Rogue class's base HIT, EVA, and CRI by 1% each.
 - Nerfed the Steel Axe's stun chance by 5% (was originally 10%).
 - Increased price of Metal Wristbraces ★ from 180B to 300B.
 - Buffed the drop chance of rare enemy accessories from 1/3 to 1/2.
 - Ethers no longer require Bits to craft. Their price has been adjusted accordingly.
 - Buffed the Knight's Greaves' DEF by 1 and AGI by 2 and also gave them +0.5% EVA and +0.5% CRI to be able to compete with the Leather Boots.
 - Increased Player 1's base MHP at levels 1 and 2 from [40, 48] to [48, 54].
 - Replaced The Warden's Darkfire with Engulfing Darkness.

Bug Fixes: