@@ -19,21 +19,12 @@
   "displayName": "Laeryidyean's Forest - Forest Arena...?",
   "encounterList": [
     {
-      "regionSet": [
-        1
-      ],
-      "troopId": 22,
-      "weight": 5
-    },
-    {
-      "regionSet": [
-        2
-      ],
+      "regionSet": [],
       "troopId": 21,
       "weight": 5
     }
   ],
-  "encounterStep": 30,
+  "encounterStep": 20,
   "height": 25,
   "note": "",
   "parallaxLoopX": false,
