@@ -2762,6 +2762,13 @@
         },
         "list": [
           {
+            "code": 108,
+            "indent": 0,
+            "parameters": [
+              "<encScript:$gameSwitches.value(80)>"
+            ]
+          },
+          {
             "code": 111,
             "indent": 0,
             "parameters": [
