@@ -188,6 +188,8 @@ Changes:
  - Changed up the preloader / title screen background.
  - Reverted most dungeons back to the old dungeon map border style (same as the indoors style).
  - Many shops have had their stock changed. Some enemy drop pools have also been adjusted.
+ - The 4-skeleton enemy troop now spawns frequently anywhere in the "Forest Arena...?" after the penultimate Laeryidyean cutscene.
+  ~ Additionally, the Adonian Monsters troop has been altered. No troops with the Skeleton can be encountered anymore, effectively removing the enemy from the game.
  - Uncrafted items now show their mask name if in an ingredient list.
  - A crafting ingredient's color now changes depending on if the player has enough of it.
  - Many items have had their icons changed to stand out a bit more.
